fix some problem

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 
     <canvas id="playbackcapture" class="playbackcapture"></canvas>
 
+    <div class="debug-controls">
+        <input type="button" id="debugAllKeysButton" value="allkeys" >
+    </div>
+
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/bookmarkControl.js"></script>
 </body>
